# PalabosDev

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/cylinder2d/: .gitignore  CMakeLists.txt  cylinder2d.cpp  guo_case.xml  guocylinder2d.cpp  lyz_guo_cylinder2d.cpp  poiseuille.cpp  validation_cylinder2d.cpp  validation_poiseuille.cpp
apps/cylinder2d/postprocessing/: postprocessing_guo_cylinder2d.ipynb
apps/pmsinglephaseflow/: .gitignore  CMakeLists.txt  PMSinglePhaseFlow  PMSinglePhaseFlow.cpp
apps/pmsinglephaseflow/input/: Berea2DConfig.xml
apps/pore_rock_coke/: CMakeLists.txt  prc.cpp
cylinder2d/: .gitignore  CMakeLists.txt  cylinder2d.cpp  guo_case.xml  guocylinder2d.cpp
cylinder2d/postprocessing/: postprocessing_guo_cylinder2d.ipynb
palaboslib/: CMakeLists.txt
src/Guo_Dynamics_with_Porosity/: Porosity_BGKdynamics.h  Porosity_BGKdynamics.hh  Porosity_addDynamicParams.h  Porosity_dynamicsTemplates.h  Porosity_dynamicsTemplates2D.h  Porosity_externalForceDynamics.h  Porosity_externalForceDynamics.hh  Porosity_externalForceTemplates.h  Porosity_externalForceTemplates2D.h
src/customizedutil/: plblogger.h  residualTracer.h  residualTracer.hh  singlePhaseFlowUtities.h  utilities.h
src/mass_transfer/: MTdynamics.h  MTdynamics.hh  MTdynamicsTemplates.h  MTdynamicsTemplates2D.h
src/parameters/: LBMModelParser2D.h  LBMModelParser2D.hh  singlePhaseFlowParameters.h
src/test/: Porosity_BGKdynamics.h  Porosity_dynamics.h  Porosity_dynamicsTemplates.h  Porosity_dynamicsTemplates2D.h
tests/: .gitignore  CMakeLists.txt  NewDynamicsTemplates.h  Porosity_DynamicsTemplates.h  Porosity_DynamicsTemplates2D.h  Porosity_dataInitializerFunctional2D.h  Porosity_dataInitializerGenerics2D.h  Porosity_dataInitializerWrappeer2D.h  Porosity_dataInitializerWrappeer2D.hh  lyz_dynamics.hh  lyz_guo_model.h  lyz_guo_model.hh  main.cpp  set_for_learning.hh  test_parameters.cpp  test_try.cpp  test_utilities.cpp
